<resources>
    <string name="app_name">Hotel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel">Hotel</string>
    <string name="choose_room">Choose room</string>
    <string name="_super">Super!</string>
    <string name="about_hotel">About hotel</string>
    <string name="facilities">Facilities</string>
    <string name="essentials">Essentials</string>
    <string name="included">What\'s included</string>
    <string name="not_included">What is not included</string>
    <string name="image">image</string>
    <string name="more_about_room">More about room</string>
    <string name="order_paid">Order paid</string>
    <string name="booking">Booking</string>
    <string name="order_has_been_processed">Your order has been processed</string>
    <string name="order_paid_description">Order №%1$s confirmation may take some time (from 1 hour to 24 hours). As soon as we receive a response from the tour operator, you will receive a notification by mail.</string>
    <string name="room">Room</string>
    <string name="nights">Nights</string>
    <string name="dates">Dates</string>
    <string name="country_city">Country, city</string>
    <string name="departure_from">Departure from</string>
    <string name="nutrition">Nutrition</string>
    <string name="buyer_information">Buyer information</string>
    <string name="information">This data is not shared with anyone. After payment we will send a check to the number and email you specified.</string>
    <string name="to_buy">To buy</string>
    <string name="service_charge">Service charge</string>
    <string name="fuel_charge">Fuel charge</string>
    <string name="tour">Tour</string>
    <string name="add_tourist">Add tourist</string>
    <string name="to_pay">To pay %1$s</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="phone_mask" translatable="false">+7 (***) ***-**-**</string>
    <string name="email_hint" translatable="false">examplemail.000@mail.ru</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="citizenship">Citizenship</string>
    <string name="international_passport_number">International passport number</string>
    <string name="passport_validity_period">Passport validity period</string>
</resources>