<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:layout_marginTop="8dp"
    android:id="@+id/container_info_tourist"
    app:cardElevation="0dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_number_tourist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_show_hide_tourist"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:cardCornerRadius="8dp"
            android:padding="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@color/button_background_lite">
            <ImageView
                android:id="@+id/iv_show_hide_tourist"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_arrow_up_24"
                android:contentDescription="@string/image" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_show_hide_tourist"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="12sp"
                    android:textColor="@color/hint" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="16sp"
                    android:textColor="@color/black_lite"
                    android:inputType="textPersonName"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_first_name"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="12sp"
                    android:textColor="@color/hint" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textSize="16sp"
                    android:textColor="@color/black_lite"
                    android:inputType="textPersonName"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_last_name"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="12sp"
                    android:textColor="@color/hint" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:textSize="16sp"
                    android:textColor="@color/black_lite"
                    android:inputType="date"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_citizenship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_birthday"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/citizenship"
                    android:textSize="12sp"
                    android:textColor="@color/hint" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_citizenship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/citizenship"
                    android:textSize="16sp"
                    android:textColor="@color/black_lite"
                    android:inputType="text"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_international_passport_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_citizenship"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/international_passport_number"
                    android:textSize="12sp"
                    android:textColor="@color/hint" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_international_passport_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/international_passport_number"
                    android:textSize="16sp"
                    android:textColor="@color/black_lite"
                    android:inputType="number"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_passport_validity_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cv_international_passport_number"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/main_background">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passport_validity_period"
                    android:textSize="12sp"
                    android:textColor="@color/hint" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_passport_validity_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passport_validity_period"
                    android:textSize="16sp"
                    android:textColor="@color/black_lite"
                    android:inputType="date"
                    android:padding="0dp"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>