<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.HotelFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            android:layout_marginTop="-10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <include
                    android:id="@+id/cv_photo"
                    layout="@layout/view_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange_lite"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="0dp"
                    android:layout_marginVertical="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cv_photo">
                    <TextView
                        android:id="@+id/tv_grade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:textSize="16sp"
                        android:textColor="@color/orange"
                        app:drawableLeftCompat="@drawable/ic_baseline_star_24" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_hotel_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/cv_grade"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <TextView
                    android:id="@+id/tv_hotel_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:paddingVertical="6dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/button_background"
                    android:background="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hotel_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
                <TextView
                    android:id="@+id/tv_hotel_minimal_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="30sp"
                    android:paddingVertical="6dp"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:background="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hotel_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />
                <TextView
                    android:id="@+id/tv_hotel_price_for_it"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/hint"
                    android:background="@color/white"
                    android:padding="6dp"
                    app:layout_constraintStart_toEndOf="@+id/tv_hotel_minimal_price"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hotel_address"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="8dp"
            app:cardElevation="0dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:id="@+id/tv_hotel_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_hotel"
                    android:paddingVertical="6dp"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/fbl_peculiarities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flexWrap="wrap"
                    app:alignItems="stretch"
                    app:alignContent="stretch"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hotel_about" />

                <TextView
                    android:id="@+id/tv_hotel_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/fbl_peculiarities" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_hotel_description"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    android:layout_marginVertical="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/b_facilities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/gray_for_peculiarities">
                        <ImageView
                            android:id="@+id/iv_facilities"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/img_facilities"
                            android:layout_gravity="start|center"
                            android:padding="6dp"
                            android:contentDescription="@string/image" />
                        <TextView
                            android:id="@+id/tv_title_facilities"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/iv_facilities"
                            app:layout_constraintTop_toTopOf="parent"
                            android:paddingHorizontal="6dp"
                            android:text="@string/facilities"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                        <TextView
                            android:id="@+id/tv_subtitle_facilities"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/iv_facilities"
                            app:layout_constraintTop_toBottomOf="@+id/tv_title_facilities"
                            android:text="@string/essentials"
                            android:paddingHorizontal="6dp"
                            android:textSize="14sp"
                            android:textColor="@color/hint"
                            android:gravity="center" />
                        <ImageView
                            android:id="@+id/iv_facilities_back"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/image" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                    <View
                        android:layout_width="270dp"
                        android:layout_height="0.5dp"
                        android:background="@color/gray"
                        android:layout_gravity="center" />
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/b_included"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@color/gray_for_peculiarities">
                        <ImageView
                            android:id="@+id/iv_included"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/img_included"
                            android:layout_gravity="start|center"
                            android:padding="6dp"
                            android:contentDescription="@string/image" />
                        <TextView
                            android:id="@+id/tv_title_included"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/iv_included"
                            app:layout_constraintTop_toTopOf="parent"
                            android:paddingHorizontal="6dp"
                            android:text="@string/included"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:gravity="center" />
                        <TextView
                            android:id="@+id/tv_subtitle_included"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toEndOf="@+id/iv_included"
                            app:layout_constraintTop_toBottomOf="@+id/tv_title_included"
                            android:text="@string/essentials"
                            android:paddingHorizontal="6dp"
                            android:textSize="14sp"
                            android:textColor="@color/hint"
                            android:gravity="center" />
                        <ImageView
                            android:id="@+id/iv_included_back"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                            android:layout_gravity="end|center"
                            android:contentDescription="@string/image" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <View
                            android:layout_width="270dp"
                            android:layout_height="0.5dp"
                            android:layout_gravity="center"
                            android:background="@color/gray" />
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/b_not_included"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/gray_for_peculiarities">
                            <ImageView
                                android:id="@+id/iv_not_included"
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:src="@drawable/img_not_included"
                                android:layout_gravity="start|center"
                                android:padding="6dp"
                                android:contentDescription="@string/image" />
                            <TextView
                                android:id="@+id/tv_title_not_included"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toEndOf="@+id/iv_not_included"
                                app:layout_constraintTop_toTopOf="parent"
                                android:paddingHorizontal="6dp"
                                android:text="@string/not_included"
                                android:textSize="16sp"
                                android:textColor="@color/black"
                                android:gravity="center" />
                            <TextView
                                android:id="@+id/tv_subtitle_not_included"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toEndOf="@+id/iv_not_included"
                                app:layout_constraintTop_toBottomOf="@+id/tv_title_not_included"
                                android:text="@string/essentials"
                                android:paddingHorizontal="6dp"
                                android:textSize="14sp"
                                android:textColor="@color/hint"
                                android:gravity="center" />
                            <ImageView
                                android:id="@+id/iv_not_included_back"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                                android:layout_gravity="end|center"
                                android:contentDescription="@string/image" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_choose_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/button_background"
                android:padding="16dp"
                android:text="@string/choose_room"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="16dp"
                android:textSize="16sp"
                android:layout_marginHorizontal="16dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>